# reachability

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_instructions.md  benchmark_notes.md  cnf_input.md  compile_sources.sh  docker_instructions.md
awari/: CMakeLists.txt  awari.cpp  bitvec.cpp  bitvec.h  bvec_sylvan.cpp  bvec_sylvan.h
distbdd-spin17/: CMakeLists.txt  bddmc.c  bench.sh  bench_all.sh  bench_selection.sh  generate_plots.py  main.c  recursive_reachability.c  recursive_reachability.h  relnext.c  relnext.cpp  relnext.h  run.sh  smartexists.cpp  smartexists.h  spin17bench_stats.csv
reach_algs/: CMakeLists.txt  bdd_reach_algs.c  bdd_reach_algs.h  bddmc.c  cache_op_ids.h  fromCNF.cpp  ldd_custom.c  ldd_custom.h  lddmc.c  test_ldd_custom.c
reachability/: CMakeLists.txt  bddmc.c  bench_all.sh  bench_selection.sh  bench_selection_ldd.sh  bench_subset.sh  generate_plots.py  get_smaller.py  lddmc.c  recursive_reachability.h  smartexists.h
scripts/: aggregate_its_data.py  aggregate_mcc_data.py  aggregate_pnml-encode_time.py  analyze_matrices.py  bench_all.sh  bench_custom_img.sh  bench_its_mcc.sh  bench_itstools.sh  bench_subset.sh  generate_plots.py  parse_pnml-encode_time.py  temp_bench_multicore.sh
src/: sylvan_int.h  sylvan_stats.h
sylvan/: CMakeLists.txt  README.md
sylvan/src/: sylvan_ldd.c
